2004-12-28  Davyd Madeley  <davyd@madeley.id.au>

	* Makefile.am: Scrollkeeper fix for distcheck (patch from Mariano
	  Suárez-Alvarez <mariano@gnome.org>
	* configure.in: Bump post release version to 2.9.3.2

2004-12-27  Tomasz Kłoczko <kloczek@pld.org.pl>

	* configure.in: add AC_DEFINE_UNQUOTED(GNOMELOCALEDIR,
				"${datadir}/locale", [locale directory])
	* accessx-status/Makefile.am:
	* battstat/Makefile.am:
	* battstat/apmlib/Makefile.am:
	* cdplayer/Makefile.am:
	* charpick/Makefile.am:
	* cpufreq/src/Makefile.am:
	* drivemount/Makefile.am:
	* geyes/Makefile.am:
	* gswitchit/Makefile.am:
	* gtik/Makefile.am:
	* gtik/access/Makefile.am:
	* gweather/Makefile.am:
	* libgswitchit/Makefile.am:
	* mini-commander/src/Makefile.am:
	* mixer/Makefile.am:
	* modemlights/Makefile.am:
	* modemlights/Makefile.am:
	* multiload/Makefile.am:
	* null_applet/Makefile.am:
	* stickynotes/Makefile.am:
	* wireless/Makefile.am: remove all all -DGNOMELOCALEDIR.
	  Now GNOMELOCALEDIR is declared in single point. Adjustments in
	  INCLUDES.

2004-12-27  Davyd Madeley  <davyd@madeley.id.au>

	* NEWS:
	* configure.in: Release 2.9.3.1

2004-12-21  Davyd Madeley  <davyd@madeley.id.au>

	* NEWS:
	* configure.in: Release 2.9.3 (not tagged)

2004-12-08  Sergey V. Udaltsov <svu@gnome.org>

	* configure.in: Bump libxklavier requirement to 1.13

2004-12-07  Sergey V. Udaltsov <svu@gnome.org>

	* gkb-new: Cleanup. No more gkb-new - only xmodmap data

2004-11-30  Davyd Madeley  <davyd@madeley.id.au>

	* configure.in: Bumping post-release version to 2.9.2.99

2004-11-30  Davyd Madeley  <davyd@madeley.id.au>

	* NEWS:
	* configure.in: Release 2.9.2

2004-11-27  Davyd Madeley  <davyd@madeley.id.au>

	* Makefile.am:
	* configure.in:
	* charpick/charpick.c: Make the usage of gucharmap optional so that
	people with gucharmap will still be able to build the applet (they
	just won't get the names of the characters, ie. the old behaviour).
	People with gucharmap will get the new feature.
	
	* configure.in: