@@ -1,3 +1,8 @@
+2005-01-01  Tomasz Kłoczko <kloczek@pld.org.pl>
+
+	* acinclude.m4: removed private copy of esd.m4. gmome-applets
+	  don't uses now esound.
+
 2004-12-28  Davyd Madeley  <davyd@madeley.id.au>
 
 	* Makefile.am: Scrollkeeper fix for distcheck (patch from Mariano
